home and overview css

--- a/overview.html
+++ b/overview.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A&T Theory</title>
+    <link rel="stylesheet" href="overview.css">
 </head>
 <body>
     <header class="header">
         <nav class="navbar">
+            <a href="index.html" class="logo">A&T Theory Lab</a>
             <ul class="navList">
                 <li class="navLink"><a href="index.html">Home</a></li>
                 <li class="navLink"><a href="overview.html">Overview</a></li>
@@ -25,7 +27,7 @@
 
 
     <section id="definition">
-        <h2>What is self-efficacy?</h2>
+        <h2>What is Self-Efficacy?</h2>
         <p>
             Self-efficacy is a key concept in motivation and learning. It is the belief in one's own abilities to
             succeed in specific tasks or situations.            
@@ -98,8 +100,11 @@
         <!-- Albert Bandura's Legacy -->
         <section id="bandura-legacy">
             <h2>Albert Bandura's Legacy</h2>
-            <p>Albert Bandura’s work on self-efficacy and social cognitive theory has had a profound impact on fields ranging from psychology to education. His theory has guided research on motivation, learning, and behavior, and continues to influence how we understand human development and achievement.</p>
-            <img src="bandura.jpg" alt="Albert Bandura" width="300">
+            <div class="imageText">
+                <p>Albert Bandura’s work on self-efficacy and social cognitive theory has had a profound impact on fields ranging from psychology to education. His theory has guided research on motivation, learning, and behavior, and continues to influence how we understand human development and achievement.</p>
+                <img src="images/albert.jpg" alt="Albert Bandura" width="300">
+            </div>
+           
         </section>
 
 </body>
