--- a/conclusion.html
+++ b/conclusion.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A&T Theory</title>
+    <link rel="stylesheet" href="conclusion.css">
 </head>
 <body>
     <header class="header">
         <nav class="navbar">
+            <a href="index.html" class="logo">A&T Theory</a>
             <ul class="navList">
                 <li class="navLink"><a href="index.html">Home</a></li>
                 <li class="navLink"><a href="overview.html">Overview</a></li>
