--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <a href="index.html" class="logo">A&T Theory Lab</a>
+            <a href="index.html" class="logo">A&T Theory</a>
             <ul class="navList">
                 <li class="navLink"><a href="index.html">Home</a></li>
                 <li class="navLink"><a href="overview.html">Overview</a></li>
@@ -22,7 +22,7 @@
 
     <section class="hero">
         <div class="content">
-            <h1>Welcome to A&T Theory Lab</h1>
+            <h1>Welcome to A&T Theory</h1>
             <p>Explore The Power of Self-Efficacy</p>
             <a href="overview.html">Start Exploring</a>
         </div>
