--- a/overview.html
+++ b/overview.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <a href="index.html" class="logo">A&T Theory Lab</a>
+            <a href="index.html" class="logo">A&T Theory</a>
             <ul class="navList">
                 <li class="navLink"><a href="index.html">Home</a></li>
                 <li class="navLink"><a href="overview.html">Overview</a></li>
