--- a/overview.html
+++ b/overview.html
@@ -10,6 +10,11 @@
     <header class="header">
         <nav class="navbar">
             <a href="index.html" class="logo">A&T Theory</a>
+            <div class="burger" onclick="toggleMenu()">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
             <ul class="navList">
                 <li class="navLink"><a href="index.html">Home</a></li>
                 <li class="navLink"><a href="overview.html">Overview</a></li>
@@ -107,5 +112,12 @@
            
         </section>
 
+        <script>
+          
+            function toggleMenu() {
+                var navList = document.querySelector('.navList');
+                navList.classList.toggle('active');  
+            }
+        </script>
 </body>
 </html>
